--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 .vscode/settings.json
 .idea/
-.__pycache__/
-.__pycache__/*
-__pycache__/*
-__pycache__/
-**/__pycache__/
-*.pyc
+./__pycache__/**
+__pycache__/*.pyc
